--- a/config.toml
+++ b/config.toml
@@ -13,11 +13,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "About"
     url = "/about/"
 [[menu.main]]
-    name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
-[[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    name = "Website"
+    url = "http://www.kdv-decisions.com/"
 
 [params]
     description = "A website built through Hugo and blogdown."
